[gd_scene load_steps=10 format=2]

[ext_resource path="res://Juego/UI/MiniMapa/Iconos/fondo.png" type="Texture" id=1]
[ext_resource path="res://Juego/UI/MiniMapa/MiniMapa.gd" type="Script" id=2]
[ext_resource path="res://Juego/UI/MiniMapa/Iconos/ship_H.png" type="Texture" id=3]
[ext_resource path="res://Juego/UI/MiniMapa/Iconos/station_C.png" type="Texture" id=4]
[ext_resource path="res://Juego/UI/MiniMapa/Iconos/icon_plusLarge.png" type="Texture" id=5]
[ext_resource path="res://Juego/UI/MiniMapa/Iconos/enemy_C.png" type="Texture" id=6]
[ext_resource path="res://Juego/UI/MiniMapa/Iconos/star_large.png" type="Texture" id=7]
[ext_resource path="res://Juego/UI/MiniMapa/Iconos/satellite_B.png" type="Texture" id=8]
[ext_resource path="res://Juego/UI/MiniMapa/Iconos/icon_exclamationSmall.png" type="Texture" id=9]

[node name="MiniMapa" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -144.0
margin_top = -166.0
margin_right = 144.0
rect_min_size = Vector2( 288, 166 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CuadroMiniMapa" type="NinePatchRect" parent="."]
margin_right = 288.0
margin_bottom = 166.0
rect_min_size = Vector2( 144, 80 )
texture = ExtResource( 1 )

[node name="ContenedorIconos" type="MarginContainer" parent="CuadroMiniMapa"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZonaRenderizadoMiniMapa" type="TextureRect" parent="CuadroMiniMapa/ContenedorIconos"]
margin_right = 278.0
margin_bottom = 156.0

[node name="IconoPlayer" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa"]
position = Vector2( 138.104, 81.751 )
rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="IconoBaseEnemiga" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa"]
visible = false
modulate = Color( 1, 0, 0.235294, 1 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="IconoEstacionRecarga" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa"]
visible = false
modulate = Color( 0, 0.284332, 0.472656, 1 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )

[node name="IconoReleMasa" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa"]
visible = false
modulate = Color( 0.533386, 0.948242, 0.843718, 1 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 7 )

[node name="IconoInterceptor" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa"]
visible = false
modulate = Color( 0.831055, 0.0616798, 0.20143, 1 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )

[node name="IconoMisilero" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa"]
visible = false
modulate = Color( 0.92549, 0.388235, 0.388235, 1 )
scale = Vector2( 0.25, 0.15 )
texture = ExtResource( 8 )

[node name="IconoMisil" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMiniMapa"]
visible = false
modulate = Color( 0.948242, 0.140755, 0.140755, 0.89 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 9 )

[node name="TweenVisibilidad" type="Tween" parent="."]

[node name="TimerVisibilidad" type="Timer" parent="."]

[connection signal="timeout" from="TimerVisibilidad" to="." method="_on_TimerVisibilidad_timeout"]
